--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 // colors
 $text-deep-green: #2a4d3a;
 $text-medium-gray: #6c757d;
@@ -75,7 +77,7 @@ $btn-hover-shadow: 0 4px 15px rgba($accent-soft-green, 0.3);
   color: $text-button;
   
   &:hover {
-    background-color: darken($button-bg, 5%);
+    background-color: color.adjust($button-bg, $lightness: -5%);
     color: $text-button;
   }
 }
@@ -86,7 +88,7 @@ $btn-hover-shadow: 0 4px 15px rgba($accent-soft-green, 0.3);
   color: $text-button;
   
   &:hover {
-    background-color: darken($button-success-bg, 5%);
+    background-color: color.adjust($button-success-bg, $lightness: -5%);
     color: $text-button;
   }
 }
@@ -99,7 +101,7 @@ $btn-hover-shadow: 0 4px 15px rgba($accent-soft-green, 0.3);
   
   &:hover {
     background-color: $text-button-hover-bg;
-    color: darken($text-deep-green, 10%);
+    color: color.adjust($text-deep-green, $lightness: -10%);
   }
 }
 
