POST request completed for Book Your Consultation

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,7 +4,7 @@
 */
 
 // Import variables
-@import './variables.scss';
+// @import './variables.scss';
 
 // Global button classes that can be applied directly in components
 .btn-smooth {
