Quick View Product and Navbar logo and favicon

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -146,3 +146,21 @@
   line-clamp: 3; /* Standard property for compatibility */
   -webkit-box-orient: vertical;
 }
+
+@keyframes fadeInOut {
+  0%, 100% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  10%, 90% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.bg-success{
+  background: $button-bg !important; ;
+}
+.bg-danger{
+  background: #EE6678 !important;
+}
