--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -167,3 +167,16 @@
 .text-primary{
   color: $text-deep-green !important;
 }
+
+.toast-message {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: $accent-soft-green;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  animation: fadeInOut 2s ease-in-out;
+}
