--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -173,8 +173,15 @@
   animation: fadeInOut 2s ease-in-out;
 }
 
+h1{
+  color:$text-primary;
+  font-weight: 700;
+  font-size: 2.5rem;
+  font-family: $font-primary;
+}
+
 h2{
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
   color: $color-primary;
