--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,3 @@
-
 .btn-smooth {
   @include button-base;
 }
@@ -209,3 +208,9 @@ h2{
         border-radius: 20px;
         z-index: 5;
       }
+
+main {
+  min-height: 80vh; /* Ensures the main content area occupies space */
+  display: flex;
+  flex-direction: column;
+}
