fix: progress on Dark/Light mode (commented Theme changing on the Navbar)

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -5,7 +5,8 @@
 $color-primary: #2a4d3a;
 $color-secondary: #6b9c7d;
 $accent-soft-green: #87c5a4;
-$background-light: #f2f7f4;
+$background-light: #d6e1d8;
+;
 $background-white:#ffffff;
 //Text
 $text-primary: #101e16;
