--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,10 @@
+.btn-smooth-outline {
+  // Dark mode: make text white for visibility
+  [data-theme="dark"] & {
+    color: #fff;
+    border-color: #fff;
+  }
+}
 
  // ====================================
 // GLOBAL DROPDOWN MENU STYLES
