--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -690,4 +690,23 @@ main {
   display: flex;
   flex-direction: column;
 }
+/* Quick table dark mode fix */
+  
+
+[data-theme="dark"] .dashboard-table .table th {
+  background-color: var(--background-light) ;
+  color: var(--text-primary) ;
+}
+
+[data-theme="dark"] .dashboard-table .table td {
+  background-color: var(--background-white) ;
+  color: var(--text-primary) ;
+}
+
+@media (max-width: 768px) {
+  .table {
+    font-size: 0.875rem;
+    background: var(--background-white);
+  }
+}
 
