feat: add empty state styles and messages for cart, orders, and wishlist sections

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -855,4 +855,11 @@ main {
   color: var(--text-white);
 }
 
+.empty-state{
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
